Update Mean Variance Optimization.ipynb

--- a/Mean Variance Optimization.ipynb
+++ b/Mean Variance Optimization.ipynb
@@ -5,7 +5,7 @@
    "id": "1c27b198",
    "metadata": {},
    "source": [
-    "# Mean Variance Optimization"
+    "# Stock Portfolio Optimization"
    ]
   },
   {
